--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mishka",
+  "name": "CSSSR",
   "version": "0.1.0",
   "private": true,
-  "description": "Личный проект «Мишка» от HTML Academy",
+  "description": "Тестовое задание для CSSSR",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "7.1.x",
